--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,30 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 120%;
 }
+
+/* Navigatie instellingen */
+ul a {
+    color: white;
+    text-decoration: none;
+
+}
+li {
+    display: inline-block;
+    height: 22px;
+    width: 100px;
+    padding: 12px;
+    text-align: center;
+    color: white;
+    border-left: 2px solid green;
+    border-right: 1px solid green;
+    background-color: olive;
+
+}
+
+li:hover {
+    background-color: lightgreen;
+    border-style: none;
+
+}
+
+/* einde navigatie instellingen */
