--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@ body {
 /* Navigatie instellingen */
 nav {
    background-color: rgb(82, 82, 197);
+   height: 30px;
+   border: 2px solid blue;
+   border-radius: 4px;
 }
 
 nav ul a {
