--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 
 /* Navigatie instellingen */
 nav {
-   background-color: rgb(82, 82, 197);
+   background-color: rgb(84, 84, 201);
    height: 75px;
    border: 2px solid blue;
    border-radius: 4px;
@@ -21,7 +21,7 @@ nav ul a {
 }
 nav li {
     display: inline-block;
-    height: 20px;
+    height: 22px;
     width: 280px;
     padding: 12px;
     font-weight: 120%;
@@ -41,7 +41,7 @@ nav li:hover {
 
 /* einde navigatie instellingen */
 
-#fotogerard {
+img{
     border: 1px solid black;
     border-radius: 8px;
 }
@@ -55,6 +55,67 @@ legend {
     
 }
 
-#contactform {
+#stamboom {
+   
+    margin-left: 280px;
+}
+
+
+
+td{
+    padding: 10px;
+}
+
+#vpfieldset tbody{
+   
+    opacity: 70%;
+    
+}
+
+/* contactformulierinstellingen*/
+
+input[type="text"], input[type="e-mail"], input[type="submit"], textarea, select, button {
     display: block;
+    margin: 15px 0px;
+    width: 400px;
+    height: 30px;
+    box-sizing: border-box;
+}
+
+textarea{
+    height: 100px;
+    padding: 5px;
+}
+
+select{
+    height: 30px;
+}
+
+#zend{
+    height: 30px;
+    border: 2px solid black;
+    border-radius: 7px;
+    background-color: rgb(127, 187, 233);
+    color: rgb(37, 19, 82);
+}
+
+#zend:hover{
+    color: rgb(172, 41, 41);
+    height: 40px;
+    font-size: 18px;
+    border: 3px solid white;
+}
+
+/*Einde contactformulierinstellingen*/
+
+footer{
+    border: 2px solid rgb(84, 84, 201);
+    width: auto;
+    height: 100px;
+}
+
+#foot{
+    width: 1400px;
+    text-align: center;
+    font-size: 120%;
 }
